<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="by.black_pearl.yourflighttickets.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_fly_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/date_range_text" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_fly_data_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:clickable="true"
                android:hint="@string/choose_first_date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="?android:attr/colorControlActivated"
                android:textSize="18sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_fly_date_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:clickable="true"
                android:hint="@string/choose_second_date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="?android:attr/colorControlActivated"
                android:textSize="18sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/search_way" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_flying_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:clickable="true"
                android:hint="@string/from"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="?android:attr/colorControlActivated"
                android:textSize="18sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_flying_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:clickable="true"
                android:hint="@string/to"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="?android:attr/colorControlActivated"
                android:textSize="18sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/search" />

</android.support.design.widget.CoordinatorLayout>
